# vvenc

./: CMakeLists.txt  create_release.sh
cmake/modules/: vvencInstall.cmake
include/vvenc/: vvenc.h
source/App/vvencFFapp/: CMakeLists.txt
source/App/vvencapp/: CMakeLists.txt
source/Lib/CommonLib/: Nal.h
source/Lib/EncoderLib/: EncGOP.cpp  EncGOP.h  EncLib.cpp  EncLib.h
source/Lib/vvenc/: CMakeLists.txt
